--- a/htp/src/Makefile.am
+++ b/htp/src/Makefile.am
@@ -1,1 +1,3 @@
-SUBDIRS = StateMachine
+AUTOMAKE_OPTIONS = subdir-objects
+bin_PROGRAMS = ht2t
+ht2t_SOURCES = Filter.cpp HtmlParser.cpp HtmlReader.cpp Main.cpp Node.cpp NodeType.cpp StateMachine/AState.cpp StateMachine/BodyState.cpp StateMachine/DivState.cpp StateMachine/HeadState.cpp StateMachine/HState.cpp StateMachine/IdleState.cpp StateMachine/IgnoredNTStates.cpp StateMachine/PState.cpp StateMachine/State.cpp
