--- a/ht2t/src/Makefile.am
+++ b/ht2t/src/Makefile.am
@@ -1,3 +1,4 @@
 AUTOMAKE_OPTIONS = subdir-objects
 bin_PROGRAMS = ht2t
 ht2t_SOURCES = Filter.cpp HtmlParser.cpp HtmlReader.cpp Main.cpp Node.cpp NodeType.cpp StateMachine/AState.cpp StateMachine/BodyState.cpp StateMachine/DivState.cpp StateMachine/HeadState.cpp StateMachine/HState.cpp StateMachine/IdleState.cpp StateMachine/IgnoredNTStates.cpp StateMachine/PState.cpp StateMachine/State.cpp
+ht2t_MANS = ../man/ht2t.1
