--- a/ht2t/src/Makefile.am
+++ b/ht2t/src/Makefile.am
@@ -4,5 +4,4 @@ ht2t_SOURCES = Filter.cpp HtmlParser.cpp HtmlReader.cpp Main.cpp Node.cpp NodeTy
 StateMachine/AState.cpp StateMachine/BodyState.cpp StateMachine/DivState.cpp StateMachine/HeadState.cpp StateMachine/HState.cpp StateMachine/IdleState.cpp StateMachine/IgnoredNTStates.cpp StateMachine/PState.cpp StateMachine/State.cpp \
 Filter.h HtmlParser.h HtmlReader.h Node.h NodeType.h version.h \
 StateMachine/AState.h StateMachine/BodyState.h StateMachine/DivState.h StateMachine/HeadState.h StateMachine/HState.h StateMachine/IdleState.h StateMachine/IgnoredNTStates.h StateMachine/PState.h StateMachine/State.h
-man_MANS = ../man/ht2t.1
-dist_man_MANS = ../man/ht2t.1
+dist_man_MANS = man/ht2t.1
