Fixed make distcheck

--- a/ht2t/src/Makefile.am
+++ b/ht2t/src/Makefile.am
@@ -2,7 +2,8 @@ AUTOMAKE_OPTIONS = subdir-objects
 bin_PROGRAMS = ht2t
 ht2t_SOURCES = Filter.cpp HtmlParser.cpp HtmlReader.cpp Main.cpp Node.cpp NodeType.cpp \
 StateMachine/AState.cpp StateMachine/BodyState.cpp StateMachine/DivState.cpp StateMachine/HeadState.cpp StateMachine/HState.cpp StateMachine/IdleState.cpp StateMachine/IgnoredNTStates.cpp StateMachine/PState.cpp StateMachine/State.cpp \
-Filter.h HtmlParser.h HtmlReader.h Node.h NodeType.h version.h \
-StateMachine/AState.h StateMachine/BodyState.h StateMachine/DivState.h StateMachine/HeadState.h StateMachine/HState.h StateMachine/IdleState.h StateMachine/IgnoredNTStates.h StateMachine/PState.h StateMachine/State.h
+Filter.h HtmlParser.h HtmlReader.h Node.h NodeType.h \
+StateMachine/AState.h StateMachine/BodyState.h StateMachine/DivState.h StateMachine/HeadState.h StateMachine/HState.h StateMachine/IdleState.h StateMachine/IgnoredNTStates.h StateMachine/PState.h StateMachine/State.h \
+build/config.h
 dist_man_MANS = man/ht2t.1
 EXTRA_DIST = automake.sh
